--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -95,6 +95,7 @@ p {
 .photo-card {
   margin-bottom: 10px;
   width: 300px;
+  width: calc((100% - 10px * 8) / 4);
 
   box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
