--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -33,6 +33,7 @@ p {
 }
 
 .container{
+  width: 1440px;
   margin: 0 auto;
   margin-top: 110px;
   padding: 0 10px 0 10px;
@@ -88,13 +89,16 @@ p {
 .gallery{
   display: flex;
   flex-wrap: wrap;
-  margin: -10px;
+  margin-left: -10px;
+    margin-top: -10px;
 }
 
 
 .photo-card {
   margin-bottom: 10px;
   width: 300px;
+  margin-left: 10px;
+    margin-top: 10px;
   width: calc((100% - 10px * 8) / 4);
 
   box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.5);
